<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ecf6f9"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/adView"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/lose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/thirty_dp" />

            <Button
                android:id="@+id/lbl_noti"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/thirty_dp"
                android:background="@drawable/bg_button_orange_700"
                android:paddingHorizontal="@dimen/twenty_dp"
                android:paddingTop="@dimen/five_dp"
                android:paddingBottom="@dimen/twenty_five_dp"
                android:text="@string/lbl_noti"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/I6_sp"
                android:visibility="gone" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/two_hundred_dp"
                android:layout_gravity="center"
                android:src="@mipmap/img_face" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/five_dp" />

            <TextView
                android:id="@+id/lbl_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/ten_dp"
                android:ellipsize="end"
                android:lines="1"
                android:text="@string/lbl_answer"
                android:textColor="@color/black"
                android:textSize="@dimen/I5_sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/ten_dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/lbl_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_score"
                    android:textColor="@color/black"
                    android:textSize="@dimen/I5_sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/five_dp" />

                <TextView
                    android:id="@+id/lbl_highscore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_highscore"
                    android:textColor="@color/black"
                    android:textSize="@dimen/I5_sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/five_dp" />

            <Button
                android:id="@+id/btn_watch"
                android:layout_width="@dimen/two_hundred_and_forty_dp"
                android:layout_height="@dimen/five_five_dp"
                android:layout_gravity="center"
                android:background="@drawable/custom_button_press_effect"
                android:text="@string/btn_watch"
                android:textColor="@android:color/white"
                android:visibility="gone" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/five_dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/five_dp" />

            <Button
                android:id="@+id/btn_play_again"
                android:layout_width="@dimen/two_hundred_and_forty_dp"
                android:layout_height="@dimen/five_five_dp"
                android:layout_gravity="center"
                android:background="@drawable/custom_button_press_effect"
                android:text="@string/btn_play_again"
                android:textColor="@android:color/white" />

        </LinearLayout>
    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_home_footer" />
</RelativeLayout>
