<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ecf6f9"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linear_top"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/md_yellow_300"
        android:orientation="horizontal"
        android:padding="@dimen/ten_dp">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@mipmap/ic_back" />

        <ImageView
            android:id="@+id/img_sound"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@mipmap/ic_on" />

        <ImageView
            android:id="@+id/img_high"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@mipmap/ic_cup" />

        <ImageView
            android:id="@+id/img_video"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@mipmap/ic_video" />

        <ImageView
            android:id="@+id/img_share"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@mipmap/ic_share" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/adView"
        android:layout_below="@+id/linear_top"
        android:layout_marginLeft="@dimen/ten_dp"
        android:layout_marginTop="@dimen/ten_dp"
        android:layout_marginRight="@dimen/ten_dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_question"
            android:padding="@dimen/twenty_dp">

            <TextView
                android:id="@+id/tv_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_question"
                android:textColor="@android:color/black"
                android:textSize="@dimen/I8_sp"
                android:textStyle="bold" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/ten_dp">

            <ImageView
                android:id="@+id/img_icon"
                android:layout_width="@dimen/I28_dp"
                android:layout_height="@dimen/I28_dp"
                android:layout_marginTop="@dimen/ten_dp"
                android:background="@drawable/icon_images" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="@dimen/twenty_dp"
                android:layout_toRightOf="@id/img_icon"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_number_question"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_nb_question"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/I8_sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_bad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/ten_dp"
                    android:text="@string/tv_fail"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/I8_sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/ten_dp"
                    android:text="@string/tv_author"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/I8_sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_a"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_marginVertical="3dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="3dp"
                android:layout_weight="1"
                android:background="@drawable/bg_button_blue_700"
                android:padding="10dp"
                android:text="@string/btn_a"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/I5_sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_b"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_marginVertical="3dp"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="6dp"
                android:layout_weight="1"
                android:background="@drawable/bg_button_grey_500"
                android:padding="10dp"
                android:text="@string/btn_b"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/I5_sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_c"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_marginVertical="3dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="3dp"
                android:layout_weight="1"
                android:background="@drawable/bg_button_orange_700"
                android:padding="10dp"
                android:text="@string/btn_c"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/I5_sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_d"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_marginVertical="3dp"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="6dp"
                android:layout_weight="1"
                android:background="@drawable/bg_button_xanh_700"
                android:padding="10dp"
                android:text="@string/btn_d"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/I5_sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_home_footer" />
</RelativeLayout>