<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ecf6f9"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/adView"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/thirty_dp" />

        <Button
            android:id="@+id/btn_explain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/thirty_dp"
            android:background="@drawable/bg_button_orange_700"
            android:paddingHorizontal="@dimen/twenty_dp"
            android:paddingTop="@dimen/five_dp"
            android:paddingBottom="@dimen/twenty_five_dp"
            android:text="@string/btn_explain"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/I6_sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:src="@mipmap/img_face" />

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <Button
            android:id="@+id/btn_play_next"
            android:layout_width="240dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:background="@drawable/custom_button_press_effect"
            android:text="@string/next"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_home_footer" />
</RelativeLayout>